--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
         <nav>
             <div class="gnb">
-                <a href="#">HOME</a>
-                <a href="#">PROFILE</a>
-                <a href="#">PROJECT-Web</a>
+                <a href="#home">HOME</a>
+                <a href="#profile">PROFILE</a>
+                <a href="#project_web1">PROJECT-Web</a>
                 <a href="#">PROJECT-Design</a>
             </div>
             <div class="sns">
@@ -117,18 +117,20 @@
         </section>
         <section id="project_web1">
             <h1>WEB : ReDesign { GentleMonster }</h1>
-            <div class="link">
-                <a href="#" target="_blank">와이어프레임/프로토타입 보기</a>
-                <a href="#">젠틀몬스터 기획서 보기</a>
-                <a href="#" target="_blank">최종 프로젝트 결과보기</a>
-            </div>
-            <div class="project_info">
-                <p>
-                    젠틀몬스터반응형웹제작(Desktop, Tablet, Mobile480 구성)<br>
-                    제작 기간 : 40시간, 개인 100% 작업<br>
-                    제작 페이지 : index/login/board/product/map 총 5페이지<br>
-                    사용프로그램 : photoshop,illustrator,HTML5,CSS3,Javascript,php,gunboard,git
-                </p>
+            <div class="con">
+                <div class="link">
+                    <a href="https://www.figma.com/file/hhXOOrLOk3HaTZhXF8NSuQ/%EC%A0%A0%ED%8B%80%EB%AA%AC%EC%8A%A4%ED%84%B0-2023?type=design&node-id=0%3A1&mode=design&t=MXqHrBuFNWFrFPVb-1" target="_blank">와이어프레임/프로토타입 보기</a>
+                    <a href="https://www.figma.com/proto/Cd4Qa7czlxLNYaJSOUQcXF/%EC%A0%A0%ED%8B%80%EB%AA%AC%EC%8A%A4%ED%84%B0-2023-%EA%B2%B0%EA%B3%BC-%EA%B8%B0%ED%9A%8D%EC%84%9C?page-id=0%3A1&type=design&node-id=25-2&viewport=1463%2C452%2C0.24&t=fDE5p8Ho25jIER6M-1&scaling=scale-down-width&mode=design" target="_blank">젠틀몬스터 기획서 보기</a>
+                    <a href="http://xixoo928.pe.kr/gentlemonster_project/index.html" target="_blank">최종 프로젝트 결과보기</a>
+                </div>
+                <div class="project_info">
+                    <p>
+                        젠틀몬스터반응형웹제작(Desktop, Tablet, Mobile480 구성)<br>
+                        제작 기간 : 40시간, 개인 100% 작업<br>
+                        제작 페이지 : index/login/board/product/map 총 5페이지<br>
+                        사용프로그램 : photoshop,illustrator,HTML5,CSS3,Javascript,php,gunboard,git
+                    </p>
+                </div>
             </div>
             <div class="preview">
                 <img src="./images/web1.png" alt="">
